Fixed spacing issues

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -103,3 +103,9 @@ div.row.team{
 	margin-right: auto;
 	min-width: 300px;
 }
+
+.team-member{
+	border-width: medium;
+	border-style: solid;
+	border-color: white;
+}
